automatically backed up by learn

--- a/html/index.html
+++ b/html/index.html
@@ -6,5 +6,7 @@
 <body>
   <p id="yo"> yo yo yo yo yo yo yo </p>
   
-  <script></script>
+  <script>
+    $("#yo").append("hey hey hey hey!!!!!");
+    </script>
 </body>
